boat-receiver/build/log/idf_py_stdout_output_19358
Command: ninja all
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/boat_controller.c.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/boat_controller.c.obj 
/home/lucas/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/lucas/boat-receiver/build/config -I/home/lucas/esp/esp-idf/components/newlib/platform_include -I/home/lucas/esp/esp-idf/components/freertos/config/include -I/home/lucas/esp/esp-idf/components/freertos/config/include/freertos -I/home/lucas/esp/esp-idf/components/freertos/config/xtensa/include -I/home/lucas/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/lucas/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/lucas/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/lucas/esp/esp-idf/components/freertos/esp_additions/include -I/home/lucas/esp/esp-idf/components/esp_hw_support/include -I/home/lucas/esp/esp-idf/components/esp_hw_support/include/soc -I/home/lucas/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/lucas/esp/esp-idf/components/esp_hw_support/dma/include -I/home/lucas/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/lucas/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/lucas/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/lucas/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/lucas/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/lucas/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/lucas/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/lucas/esp/esp-idf/components/heap/include -I/home/lucas/esp/esp-idf/components/heap/tlsf -I/home/lucas/esp/esp-idf/components/log/include -I/home/lucas/esp/esp-idf/components/soc/include -I/home/lucas/esp/esp-idf/components/soc/esp32 -I/home/lucas/esp/esp-idf/components/soc/esp32/include -I/home/lucas/esp/esp-idf/components/soc/esp32/register -I/home/lucas/esp/esp-idf/components/hal/platform_port/include -I/home/lucas/esp/esp-idf/components/hal/esp32/include -I/home/lucas/esp/esp-idf/components/hal/include -I/home/lucas/esp/esp-idf/components/esp_rom/include -I/home/lucas/esp/esp-idf/components/esp_rom/esp32/include -I/home/lucas/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/lucas/esp/esp-idf/components/esp_rom/esp32 -I/home/lucas/esp/esp-idf/components/esp_common/include -I/home/lucas/esp/esp-idf/components/esp_system/include -I/home/lucas/esp/esp-idf/components/esp_system/port/soc -I/home/lucas/esp/esp-idf/components/esp_system/port/include/private -I/home/lucas/esp/esp-idf/components/xtensa/esp32/include -I/home/lucas/esp/esp-idf/components/xtensa/include -I/home/lucas/esp/esp-idf/components/xtensa/deprecated_include -I/home/lucas/esp/esp-idf/components/spi_flash/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/lucas/boat-receiver=. -fmacro-prefix-map=/home/lucas/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/boat_controller.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/boat_controller.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/boat_controller.c.obj -c /home/lucas/boat-receiver/main/boat_controller.c
/home/lucas/boat-receiver/main/boat_controller.c:17:9: warning: "ESP_LOGI" redefined
   17 | #define ESP_LOGI log
      |         ^~~~~~~~
In file included from /home/lucas/boat-receiver/main/boat_controller.c:9:
/home/lucas/esp/esp-idf/components/log/include/esp_log.h:127:9: note: this is the location of the previous definition
  127 | #define ESP_LOGI(tag, format, ...) do { ESP_LOG_LEVEL_LOCAL(ESP_LOG_INFO, tag, format, ##__VA_ARGS__); } while(0)
      |         ^~~~~~~~
/home/lucas/boat-receiver/main/boat_controller.c: In function 'app_main':
/home/lucas/boat-receiver/main/boat_controller.c:21:5: error: implicit declaration of function 'log' [-Wimplicit-function-declaration]
   21 |     log("hello world");
      |     ^~~
/home/lucas/boat-receiver/main/boat_controller.c:15:1: note: include '<math.h>' or provide a declaration of 'log'
   14 | #include "esp_flash.h"
  +++ |+#include <math.h>
   15 | #include "esp_system.h"
/home/lucas/boat-receiver/main/boat_controller.c:21:5: warning: incompatible implicit declaration of built-in function 'log' [-Wbuiltin-declaration-mismatch]
   21 |     log("hello world");
      |     ^~~
/home/lucas/boat-receiver/main/boat_controller.c:21:5: note: include '<math.h>' or provide a declaration of 'log'
/home/lucas/boat-receiver/main/boat_controller.c:21:9: error: incompatible type for argument 1 of 'log'
   21 |     log("hello world");
      |         ^~~~~~~~~~~~~
      |         |
      |         char *
/home/lucas/boat-receiver/main/boat_controller.c:21:9: note: expected 'double' but argument is of type 'char *'
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/lucas/boat-receiver/build/bootloader/esp-idf/esptool_py && /home/lucas/.espressif/python_env/idf5.5_py3.13_env/bin/python /home/lucas/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/lucas/boat-receiver/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
ninja: build stopped: subcommand failed.
